# project_game_c-

./: README.md  ~$здок C++.docx  диздок C++.docx  питчинг 16.03.pptx
PlateOfFate_fixed/: CMakeLists.txt  PlateOfFate.sln  PlateOfFate.vcxproj
PlateOfFate_fixed/data/: config.csv  customers.csv  recipes.csv
PlateOfFate_fixed/src/: csv_loader.cpp  csv_loader.h  display.cpp  display.h  game_logic.cpp  game_logic.h  main.cpp  types.h
